syntax = "proto3";
package healthcheck;

import "google/api/annotations.proto";

option go_package = "proto";

service HealthcheckService {
    rpc SayHello (HelloRequest) returns (HelloResponse) {
        option (google.api.http) = {
            post: "/healthcheck"
            body: "*"
        };
    }
}

message HelloRequest {
    string greeting = 1;
}

message HelloResponse {
    string reply = 1;
}
